feat: 重新调整实体加速器代码结构，增加可读性；添加实体加速器对appflux存储电量的扣除支持；添加实体加速器是否优先使用磁盘存储能源配置项